# PSPCompat

./: CMakeLists.txt  Makefile  main.c
include/: high_mem.h  libertas.h  region_free.h
rebootex/: CMakeLists.txt  Makefile  patches.c
rebootex/.deps/: patches.Po
src/: cwpatch.c  high_mem.c  libertas.c  pops4tool.c  region_free.c  syspatch.c  usb_charge.c  wpa2.c
